--- a/themes/Ume/scss/modules/sp/_sidebar.scss
+++ b/themes/Ume/scss/modules/sp/_sidebar.scss
@@ -24,7 +24,9 @@
         padding: 4vmin 0;
         a {
             font-size: 1.7rem;
+            padding: 4vmin;
             margin-bottom: 2vmin;
+            letter-spacing: 1px;
         }
         z-index: 500;
     }
