--- a/themes/Ume/scss/modules/sp/_main.scss
+++ b/themes/Ume/scss/modules/sp/_main.scss
@@ -9,7 +9,7 @@
     }
     .index-content, .page-content {
         border-radius: 3px;
-        margin-top: 8vh;
+        margin-top: 15vh;
         height: unset;
         overflow-y: unset;
         -webkit-overflow-scrolling: unset;
@@ -17,8 +17,9 @@
         min-height: 65vh;
     }
     .index-content {
-        .li-item-title { font-size: 1.4rem; }
-        .li-item-time  { font-size: .9rem;  }
+        .li-item { padding: 4vmin 0; }
+        .li-item-title { font-size: 1.3rem; letter-spacing: unset; }
+        .li-item-time  { font-size: .9rem; letter-spacing: 1px; }
     }
     .page-header {
         width: 80%;
@@ -26,6 +27,7 @@
             padding: 7px 0 7px 16px;
             font-size: 1.5rem;
             border-left: rgba(158, 122, 122, 0.8) 25px solid;
+            letter-spacing: 1px;
         }
         h2 {
             height: 8px;
@@ -33,11 +35,15 @@
         }
     }
     .page-body {
+        margin-top: 8vh;
         h1, h2, h3, h4, h5, h6 {
-            font-weight: 500;
+            font-weight: 600;
+            letter-spacing: 1px;
+            font-size: 1.4rem;
         }
     }
     .page-footer, .prev-next {
         margin-top: 10vh;
     }
+    .page-time { letter-spacing: normal; }
 }
